# tcvm-net-cvip2026

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/attacks/: fgsm.yaml  pgd.yaml  physical.yaml
configs/datasets/: advtraffic26.yaml  bdd100k.yaml  helmet.yaml
configs/experiments/: full_benchmark.yaml  tcvm_yolov8n.yaml
docs/: methodology.md  physical_world_validation_protocol.md  quick_start.md  reproducibility_checklist.md
outputs/results_50_complete/: adav_style_reference_summary.csv  attack_asr_bootstrap_ci.csv  edge_benchmark_reflective_probe.json  public_helmet_expansion_decision.csv  public_helmet_multiclip10_summary.csv  public_helmet_multiclip20_summary.csv  public_helmet_multiclip25_summary.csv  public_helmet_multiclip30_calibrated_summary.csv  public_helmet_multiclip30_summary.csv  public_helmet_multiclip_summary.csv  public_helmet_pilot_summary.csv  robustness_summary.csv  robustness_summary.json  tcvm_calibration_protocol_public_helmet30.csv  tcvm_calibration_protocol_public_helmet30.json  tcvm_overhead_profile_public_helmet10.csv  tcvm_overhead_profile_public_helmet10.json  tcvm_speed_modes_public_helmet10.csv  tcvm_threshold_sensitivity_public_helmet_multiclip10.csv  tcvm_threshold_sensitivity_public_helmet_multiclip20.csv  yolov8_patch_public_summary.csv
scripts/: benchmark_edge.py  evaluate.py  generate_attacks.py  prepare_dataset.py  run_inference.py  train_yolov8.py  update_paper_results.py  visualize_results.py
tests/: test_geometry.py  test_tcvm.py  test_tcvm_net.py
(+78 files in other folders)
