[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advtraffic-tcvm"
version = "0.1.0"
description = "Temporal consistency defense against physical adversarial attacks in traffic surveillance videos."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AdvTraffic-TCVM Authors" }]
dependencies = [
  "ultralytics>=8.2.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "torchmetrics>=1.3.0",
  "opencv-python>=4.9.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "matplotlib>=3.8.0",
  "PyYAML>=6.0.1",
  "tqdm>=4.66.0",
  "scikit-learn>=1.3.0",
  "adversarial-robustness-toolbox>=1.17.0",
  "foolbox>=3.3.4",
  "kaggle>=1.6.17",
  "psutil>=5.9.0",
  "nvidia-ml-py>=12.535.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
